Draw server-side pointer when the session has the grab

If there are several SpiceDisplay widgets, only one will have the grab,
but the pointer may need to be drawn on another of the displays.  We
thus need to track the grab status on SpiceSession, not just
per-display.

This solves the following bug:
https://bugs.freedesktop.org/show_bug.cgi?id=38024